# YoloPrototype

./: CMakeLists.txt  main.cu
base/: ResnetBTNBlock.cu  ResnetBTNBlock.cuh
